# check-the-tone

./: Cargo.toml  LICENSE  README.md  justfile
src/: cli.rs  main.rs  msg.rs  test.rs
tests/: cli.rs
